test/fail/error_functor.sest
module ErrorFunctor = struct

  signature S = sig
    type t :: o
  end

  module F = fun(X : S) -> fun(Y : S) -> struct
    val f(x : X.t) : Y.t = x
  end

end
